clusters/titania/apps/uptime/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
  labels:
    app: uptime
    app.kubernetes.io/instance: uptime
    app.kubernetes.io/name: uptime
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime
  template:
    metadata:
      labels:
        app: uptime
        app.kubernetes.io/instance: uptime
        app.kubernetes.io/name: uptime
    spec:
      containers:
        - name: uptime
          image: louislam/uptime-kuma:1.23.17-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptime-data
