clusters/titania/apps/uptime/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: uptime
    app.kubernetes.io/name: uptime
  name: uptime-ingress
spec:
  tls:
  - hosts:
    - "*.cosmos.cboxlab.com"
    secretName: cosmos-cboxlab-cert
  rules:
  - host: uptime.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime
            port:
              name: http
